# a_webhook_receiver

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  mise.toml  pyproject.toml
.claude/: settings.local.json
docs/: decisions.md  requirements.md  todos.md
docs/adr/: 0001-record-architecture-decisions.md  0002-async-processing-model.md  0003-idempotency-enforcement.md  0004-data-model-and-indexing.md  0005-data-retention-ttl.md  0006-sqlite-concurrency-model.md  0007-configuration-via-env-vars.md  0008-hard-delete-for-retention.md  0009-in-memory-idempotency-cache.md  0010-retry-logic.md  0011-inbox-pattern.md  0012-idempotency-store-always-queries-db.md  other_details_and_decisions.md  template.md
load_tests/: locustfile.py  locustfile_1000.py  locustfile_final.py
src/webhook_receiver/: app.py  cleanup.py  config.py  database.py  dependencies.py  logging_setup.py  metrics.py  models.py  queue.py  router.py  schema.sql  store.py  workers.py
tests/: conftest.py  test_api.py  test_cleanup.py  test_config.py  test_database.py  test_metrics.py  test_queue.py  test_workers.py
